--- a/.env
+++ b/.env
@@ -3,27 +3,27 @@ APP_ENV=local
 APP_KEY=base64:OGEN/LZtYFQIT7ViM/P4Q1RU4OejfUcZUp3MLIOzT6M=
 APP_DEBUG=true
 
-# APP_URL=http://anniv-reg-form-dev.com
-# API_URL=http://anniv-reg-form-dev.com/api
-# API_VERSION=v1
-# APP_TIMEZONE=Asia/Manila
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=anniv_reg_db
-# DB_USERNAME=root
-# DB_PASSWORD=
-
-APP_URL=https://anniv.pampam.tech
-API_URL=https://anniv.pampam.tech/api
+APP_URL=http://anniv-reg-form-dev.com
+API_URL=http://anniv-reg-form-dev.com/api
 API_VERSION=v1
 APP_TIMEZONE=Asia/Manila
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u261467003_anniv_reg_db
-DB_USERNAME=u261467003_pampam_anniv
-DB_PASSWORD=Icsmd2024
+DB_DATABASE=anniv_reg_db
+DB_USERNAME=root
+DB_PASSWORD=
+
+# APP_URL=https://anniv.pampam.tech
+# API_URL=https://anniv.pampam.tech/api
+# API_VERSION=v1
+# APP_TIMEZONE=Asia/Manila
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=u261467003_anniv_reg_db
+# DB_USERNAME=u261467003_pampam_anniv
+# DB_PASSWORD=Icsmd2024
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
