--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ DB_DATABASE=anniv_reg_db
 DB_USERNAME=root
 DB_PASSWORD=
 
-# APP_URL=https://anniv.pampam.tech
-# API_URL=https://anniv.pampam.tech/api
+# APP_URL=https://rnfttzbecbmbg5u5vqd8s7goqubhxoib.pampam.tech
+# API_URL=https://rnfttzbecbmbg5u5vqd8s7goqubhxoib.pampam.tech/api
 # API_VERSION=v1
 # APP_TIMEZONE=Asia/Manila
 # DB_CONNECTION=mysql
