--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-APP_NAME=SCMS
+APP_NAME=RFM
 APP_ENV=local
 APP_KEY=base64:OGEN/LZtYFQIT7ViM/P4Q1RU4OejfUcZUp3MLIOzT6M=
 APP_DEBUG=true
-
 APP_URL=http://anniv-reg-form-dev.com
 API_URL=http://anniv-reg-form-dev.com/api
 API_VERSION=v1
@@ -13,62 +12,10 @@ DB_PORT=3306
 DB_DATABASE=anniv_reg_db
 DB_USERNAME=root
 DB_PASSWORD=
-
-# APP_URL=https://rnfttzbecbmbg5u5vqd8s7goqubhxoib.pampam.tech
-# API_URL=https://rnfttzbecbmbg5u5vqd8s7goqubhxoib.pampam.tech/api
-# API_VERSION=v1
-# APP_TIMEZONE=Asia/Manila
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=u261467003_anniv_reg_db
-# DB_USERNAME=u261467003_pampam_anniv
-# DB_PASSWORD=Icsmd2024
-
 LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
-
-VITE_APP_NAME="${APP_NAME}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
