App id implementation test

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APP_NAME=RFM
 APP_ENV=local
 APP_KEY=base64:OGEN/LZtYFQIT7ViM/P4Q1RU4OejfUcZUp3MLIOzT6M=
 APP_DEBUG=true
+APP_ID=0NQTWExAXRnUynFgaGlRQ7A7IL4MNnxM
 APP_URL=http://anniv-reg-form-dev.com
 API_URL=http://anniv-reg-form-dev.com/api
 API_VERSION=v1
